@@ -1,6 +1,9 @@
 2020-07-XX   1.4.1:
 -------------------
   * add official Python 3.9 support
+  * add DeprecationWarning when trying to extend bitarrays
+    from bytes on Python 3
+  * add DeprecationWarning for bitdiff()
   * improve many docstrings
   * C-level:
       - rewrote `.fromfile()` and `.tofile()` implementation,
